virt01/manual/home-assistant/esphome/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: esphome
  labels:
    app: esphome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      serviceAccountName: esphome-sa
      containers:
        - name: esphome
          image: esphome/esphome
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          ports:
          - containerPort: 6052
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 6052
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /config
            name: config-pv
          - mountPath: /cache
            name: cache-volume
      volumes:
      - name: config-pv
        persistentVolumeClaim: 
          claimName: esphome-config-pvc
      - name: cache-volume
        emptyDir:
          sizeLimit: 5Gi
