virt01/manual/home-assistant/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome-svc
  labels:
    app: esphome
spec:
  ports:
    - port: 6052
      protocol: TCP
      name: esphome-port
  selector:
    app: esphome
