virt01/manual/home-assistant/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: esphome.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: esphome-svc
            port:
              number: 6052
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - esphome.k3s.nf.lab
    secretName: esphome-cert-tls
